# robot-soccer

./: .gitignore  Concept Generation.xlsx  README.md  practice.c  requirements.txt
gui/: README.md  ball_msg_data.mat  ball_msg_data10.mat  ball_msg_data11.mat  ball_msg_data12.mat  ball_msg_data2.mat  ball_msg_data3.mat  ball_msg_data4.mat  ball_msg_data5.mat  ball_msg_data6.mat  ball_msg_data7.mat  ball_msg_data8.mat  ball_msg_data9.mat  ball_vision_test.fig  bot_msg_data.mat  bot_msg_data2.mat  bot_msg_data3.mat  bot_msg_data4.mat  bot_msg_data5.mat  bot_msg_data6.mat  bot_msg_data7.mat  gen_msg.m  main.fig  main.m  main_gui_setup.m  main_ros_setup.m  process_ball_data.m  process_bot_data.m  setup.m
gui/data/: README.md  ally01.mat  ally03.mat  ally05.mat  ally06.mat  ally07.mat  ally07_rerun.mat  ally08_rerun.mat  ally10.mat  ally11.mat  ally12.mat  ally13.mat  ally14.mat  ball01.mat  ball03.mat  ball04.mat  ball05.mat  ball08.mat  ball08_rerun.mat  ball09.mat
hardware/: README.md
hardware/PCB/: PowerBoard.brd  PowerBoard.sch  RoboclawAdapter.brd  RoboclawAdapter.sch
matlab/gui/: README.md  ball_vision_test.m  gen_msg.m  unpack_ros_msg.m
ros/: .gitignore  README.md
ros/catkin_ws/: .gitignore  README.md
ros/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
ros/install/: .rosinstall  _setup_util.py  setup.sh
ros/src/soccersim/: .gitignore  CMakeLists.txt  README.md  package.xml
ros/src/soccersim/cad/: field_collision.blend  field_visual.blend
ros/src/soccersim/launch/: ball.launch  robot.launch  soccer.launch
ros/src/soccersim/meshes/: field9_collision.dae  field9_visual.dae
ros/src/soccersim/models/: camera.xacro  field.xacro
ros/src/soccersim/msg/: SoccerPoses.msg
ros/src/soccersim/plugins/: soccer_ball.cpp  soccer_drive.cpp
ros/src/soccersim/src/: controller.cpp  vision.cpp
ros/src/soccersim/urdf/: ball.xacro  robot.xacro  wheel.xacro
ros/src/soccersim/worlds/: soccer_field.world.xacro
scripts/: README.md  battery.py  kick.py  killbot.py  odroid_setup.bash  parse_yaml.sh  simulator_setup.bash
simulation/: controller_away.m  controller_away_krum.m  controller_home.m  controller_home_mine.m  controller_walle.m  drawEnvironment.m  param.m  robot_soccer_sim.slx
simulation/Simulator_code_new_with_camera/: controller_home.m  controller_walle.m  param.m
vision/: CMakeLists.txt  main.cpp  robot.cpp  robot.h
(+166 files in other folders)
